Closed
Bug 302470
Opened 21 years ago
Closed 19 years ago
Virtual folders in IMAP account with non ascii characters displayed wrong
Categories
(Thunderbird :: Mail Window Front End, defect)
Thunderbird
Mail Window Front End
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: bugzilla.20.brynolf, Assigned: mscott)
References
(Blocks 1 open bug, )
Details
(Keywords: verified1.8.1.2)
Attachments
(1 file)
|
1.42 KB,
patch
|
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.10) Gecko/20050716 Firefox/1.0.6
Build Identifier: Thunderbird 1.0+ (20050727)
If you create a virtual folder based on an imap search with a name with non
ascii characters it will show upp corectly in the UI, but at the next
application launch it won't be visible at all in the UI. At the launch after
that it will be visible but with its "I forgot it is unicode" view. (something
like Inbox-l&APY-ne)
Reproducible: Always
Steps to Reproduce:
1. Search for something in the search box
2. Choose "Save search as folder"
3. Pick a name like "Inbox-åke" (alt-0229 on windows)
4. Close TB
5. Open and verify that the folder is missing
6. Close TB
7. Open and verify that the folder shows up as "Inbox-&AOU-ke"
Actual Results:
See step 5,7 above
Expected Results:
The folder should show up as "Inbox-åke" (and preferably every time you launch TB :)
In my profile there are two folders after the second re-launch of TB.
"Inbox-&AOU-ke.sbd" and "Inbox-&-AOU-ke.sbd"
This might be similar to bug #271711 which was fixed before 1.0 was released.
| Reporter | ||
Comment 1•21 years ago
|
||
Bugzilla might need some character set tweaking too. The ineligible character
above is å (press alt-0229 on windows if you have a crippled keyboard)
Comment 2•21 years ago
|
||
Reproduced with TB 1.0+0725 and TB 1.0.5, Win2K. This happens only when the
folder is placed under the IMAP account.
There are additional problems. The saved-search folder can occasionally (after
restarting, and then selecting the folder) simply disappear, or lose its "saved-
search" status, then when selected, the client polls the server for the folder,
can't find it, and deletes it.
Workaround: create the Saved Search folder under Local Folders.
Assignee: mscott → bienvenu
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows XP → Windows 2000
Summary: Virtual folders with non ascii characters displayed wrong → Virtual folders in IMAP account with non ascii characters displayed wrong
Version: unspecified → Trunk
| Reporter | ||
Comment 3•20 years ago
|
||
I've just tried this on thunderbird 1.5 beta1 and the error is still there. I
don't know if the native English speakers realize the severity of this problem.
Most of these unusable characters are vowels. So the English equivalent of this
problem would be. "You can name your folder whatever you want, but you can't use
the letters 'e' or 'a'." Of course you can use the product with the limitation,
but it is a major annoyance. (apart from that thunderbird rocks :)
FWIW, as a member of the Dutch localisation team, I think this is very important too.
Comment 5•20 years ago
|
||
Seeing this on linux too. Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8) Gecko/20051120 Thunderbird/1.5 ID:2005112006
OS: Windows 2000 → All
Comment 6•20 years ago
|
||
*** Bug 345819 has been marked as a duplicate of this bug. ***
| Assignee | ||
Updated•19 years ago
|
| Assignee | ||
Comment 7•19 years ago
|
||
I think I've got a fix for this.
Assignee: bienvenu → mscott
Status: ASSIGNED → NEW
QA Contact: front-end
| Assignee | ||
Comment 8•19 years ago
|
||
This makes the encoding for the folder name string we write out to disk match the encoding used for local folder saved searches in nsMsgDBFolder::AddSubfolder.
Since virtual folders never get sent to the imap server, it should be safe to not use modified utf-7 here (I hope).
With this patch, I'm able to create virtual folders with names like: Inbox-åke. Quiting and restarting shows the correct name in the folder pane.
Although I'm still having problems trunk only where the folders aren't showing up until I toggle folder views. But that happens without this patch for me right now.
Attachment #251006 -
Flags: superreview?(bienvenu)
Updated•19 years ago
|
Attachment #251006 -
Flags: superreview?(bienvenu) → superreview+
| Assignee | ||
Comment 9•19 years ago
|
||
fixed on the branch and trunk. Note: this works for new saved search folders, not folders you may have already created that contained non-ascii characters.
Would be great if we could get some testing feedback on this in beta 2 (when it comes out) or on a branch nightly.
Comment 10•19 years ago
|
||
This seems to be working fine on trunk.
However, branch is still very broken, removing fixed1.8.1.2. Tested on Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.8.1.2pre) Gecko/20070110 Thunderbird/2.0b1 ID:2007011003
After restart saved searches named XXåäö look like ABC&AOUA5AD2 or something similar.
Keywords: fixed1.8.1.2
| Assignee | ||
Comment 11•19 years ago
|
||
That's strange. And these are newly created saved search folders?
| Assignee | ||
Comment 12•19 years ago
|
||
The patch didn't get checked into the branch. I just corrected that :).
Keywords: fixed1.8.1.2
Comment 13•19 years ago
|
||
Looking good with todays build:)
Keywords: fixed1.8.1.2 → verified1.8.1.2
Hardware: PC → All
| Reporter | ||
Comment 14•19 years ago
|
||
I've given it a good bashing on OSX and it works like a charm, Thanks!!!
Updated•19 years ago
|
Blocks: folders-with-special-characters
You need to log in
before you can comment on or make changes to this bug.
Description
•