Bug #302470 --> saved search folders containing non-ascii characters aren't displayed correctly in the folder pane. sr=bienvenu